<resources>
    <string name="app_name">AIDeviceManager</string>
    <string name="i_phone" translatable="false">请输入手机号</string>
    <string name="i_uname" translatable="false">请输入用户名</string>
    <string name="i_phone_length" translatable="false">手机号格式不正确</string>
    <string name="i_phone_self" translatable="false">不是自己手机号</string>
    <string name="i_sucess" translatable="false">修改成功</string>
    <string name="i_get_code" translatable="false">获取验证码</string>
    <string name="i_phone_right" translatable="false">手机号格式正确</string>
    <string name="i_porc_length" translatable="false">请输入密码</string>
    <string name="i_yzm" translatable="false">请输入验证码</string>
    <string name="i_login" translatable="false">登录过期，请重新登录</string>
    <string name="loading" translatable="false">加载中,请稍后...</string>
    <string name="net_error" translatable="false">无可用网络，请检查网络连接</string>
    <string name="d_task_xx" translatable="false">任务消息</string>
    <string name="d_waring_xx" translatable="false">报警消息</string>
    <string name="d_broken_xx" translatable="false">故障消息</string>
    <string name="d_broken" translatable="false">设备故障</string>
    <string name="d_user" translatable="false">用户</string>
    <string name="d_xxzc" translatable="false">消息中心</string>
    <string name="d_help" translatable="false">帮助</string>
    <string name="d_yhtk" translatable="false">用户条款</string>
    <string name="d_yszc" translatable="false">隐私政策</string>
    <string name="d_about" translatable="false">关于</string>
    <string name="d_logout" translatable="false">退出登录</string>
    <string name="d_xxgg" translatable="false">信息更改</string>
    <string name="d_mmgg" translatable="false">密码更改</string>
    <string name="d_connect" translatable="false">设备已连接</string>
    <string name="d_no_connect" translatable="false">设备未连接</string>
    <string name="d_spkd" translatable="false">扫盘宽度</string>
    <string name="d_qscs" translatable="false">清扫车速</string>
    <string name="d_dsqd" translatable="false">定时启动</string>
    <string name="d_vcu" translatable="false">VCU版本</string>
    <string name="d_sfbb" translatable="false">算法版本</string>
    <string name="d_rjbb" translatable="false">软件版本</string>
    <string name="d_ddlbj" translatable="false">低电量报警</string>
    <string name="d_carset" translatable="false">车辆设置</string>
    <string name="d_cardata" translatable="false">车辆数据</string>
    <string name="d_sysdata" translatable="false">同步数据</string>
    <string name="d_jcgx" translatable="false">检查更新</string>
    <string name="d_cgqgl" translatable="false">传感器管理</string>
    <string name="d_jgld1" translatable="false">激光雷达1</string>
    <string name="d_jgld2" translatable="false">激光雷达2</string>
    <string name="d_jgld3" translatable="false">激光雷达3</string>
    <string name="d_jgld4" translatable="false">激光雷达4</string>
    <string name="d_jgld5" translatable="false">激光雷达5</string>
    <string name="d_jgld6" translatable="false">激光雷达6</string>
    <string name="d_jgld7" translatable="false">激光雷达7</string>
    <string name="d_jgld8" translatable="false">激光雷达8</string>
    <string name="d_hmldb1" translatable="false">毫米雷达波1</string>
    <string name="d_hmldb2" translatable="false">毫米雷达波2</string>
    <string name="d_hmldb3" translatable="false">毫米雷达波3</string>
    <string name="d_hmldb4" translatable="false">毫米雷达波4</string>
    <string name="d_hmldb5" translatable="false">毫米雷达波5</string>
    <string name="d_hmldb6" translatable="false">毫米雷达波6</string>
    <string name="d_hmldb7" translatable="false">毫米雷达波7</string>
    <string name="d_hmldb8" translatable="false">毫米雷达波8</string>
    <string name="d_csb1" translatable="false">超声波1</string>
    <string name="d_csb2" translatable="false">超声波2</string>
    <string name="d_csb3" translatable="false">超声波3</string>
    <string name="d_csb4" translatable="false">超声波4</string>
    <string name="d_csb5" translatable="false">超声波5</string>
    <string name="d_csb6" translatable="false">超声波6</string>
    <string name="d_csb7" translatable="false">超声波7</string>
    <string name="d_csb8" translatable="false">超声波8</string>
    <string name="d_zedxj" translatable="false">ZED相机</string>
    <string name="d_IMUstate" translatable="false">IMU状态</string>
    <string name="d_zndcgl" translatable="false">智能电池管理</string>
    <string name="d_dy" translatable="false">电压</string>
    <string name="d_dl" translatable="false">电流</string>
    <string name="d_wd" translatable="false">温度</string>
    <string name="d_dqdl" translatable="false">当前电量</string>
    <string name="d_dcrl" translatable="false">电池容量</string>
    <string name="d_xhcs" translatable="false">循环次数</string>
    <string name="d_yzddlbj" translatable="false">严重低电量报警</string>
    <string name="d_dcbh" translatable="false">电池编号</string>
    <string name="d_yundata" translatable="false">云端数据</string>
    <string name="d_dcsydl" translatable="false">电池剩余电量</string>
    <string name="d_qsxrj" translatable="false">清水箱容积</string>
    <string name="d_rjsf" translatable="false">软件算法</string>
    <string name="d_zrzyrw" translatable="false">载入作业任务</string>
    <string name="d_title" translatable="false">深兰智能设备管理工具</string>
    <string name="d_sjhmyz" translatable="false">手机号码验证</string>
    <string name="d_qsrsjh" translatable="false">请输入手机号...</string>
    <string name="d_qsryzm" translatable="false">请输入验证码...</string>
    <string name="d_yz" translatable="false">验证</string>
    <string name="d_yhm" translatable="false">用戶名:</string>
    <string name="d_yh" translatable="false">用戶</string>
    <string name="d_qsryhm" translatable="false">请输入用戶名</string>
    <string name="d_sjh" translatable="false">手机号:</string>
    <string name="d_qsrsjh2" translatable="false">请输入手机号</string>
    <string name="d_fsyzm" translatable="false">发送验证码</string>
    <string name="d_yzm" translatable="false">验证码:</string>
    <string name="d_yzsj" translatable="false">验证手机</string>
    <string name="d_save" translatable="false">保存</string>
    <string name="d_cancel" translatable="false">取消</string>
    <string name="d_qsrxmm" translatable="false">输入新密码</string>
    <string name="d_qsrmm" translatable="false">输入密码</string>
    <string name="d_zcsrxmm" translatable="false">再次输入新密码</string>
    <string name="d_qrxg" translatable="false">确认修改</string>
    <string name="d_mm" translatable="false">密   码:</string>
    <string name="d_wjmm" translatable="false">忘记密码?</string>
    <string name="d_login" translatable="false">登录</string>
    <string name="d_qrxmm" translatable="false">确认新密码:</string>
    <string name="d_dqmm" translatable="false">当前密码:</string>
    <string name="d_xmm" translatable="false">新密码:</string>
    <string name="d_xxID" translatable="false">设备名</string>
    <string name="d_time" translatable="false">时间:</string>
    <string name="d_time2" translatable="false">时间</string>
    <string name="d_zt" translatable="false">主题</string>
    <string name="d_nr" translatable="false">内容</string>
    <string name="d_mt" translatable="false">每天</string>
    <string name="button_startwork">自动作业</string>
    <string name="button_stopwork">暂停作业</string>
    <string name="button_endwork">停止作业</string>
    <string name="button_continuwork">继续作业</string>
    <string name="string_saoshua">扫刷</string>
    <string name="string_pengshui">喷水</string>
    <string name="string_xifeng">吸风</string>
    <string name="EMG">紧急停止</string>
    <string name="release_EMG">松开急停</string>
    <string name="NOTICE">提示</string>
    <string name="EMG_NOTICE">是否停止作业?</string>
    <string name="ems_show">急停按钮按下</string>
    <string name="ems_showbtn1">停止</string>
    <string name="ems_showbtn2">取消</string>
    <string name="socket_connected">连接成功</string>
    <string name="socket_disconnect">socket断开连接,即将返回设备列表</string>
    <string name="d_qd">启动</string>
    <string name="d_ts">提示</string>
    <string name="d_ts1">车辆目前处于有人驾驶状态中，是否确认切换到无人作业？</string>
    <string name="d_qh">切换</string>
    <string name="d_dj">待机</string>
    <string name="d_qszyrwxz">清扫作业任务选择</string>
    <string name="d_zdzyz">自动作业中</string>
    <string name="d_sdjsz">手动驾驶中</string>
    <string name="d_gz">故障</string>
    <string name="d_wz">未知</string>
    <string name="d_ymz">油门值:</string>
    <string name="d_sczt">刹车状态:</string>
    <string name="d_sczt1">手刹状态:</string>
    <string name="d_sszt">扫刷状态:</string>
    <string name="d_sswz">扫刷位置:</string>
    <string name="d_ljxwz">垃圾箱位置:</string>
    <string name="d_xfzt">吸风状态:</string>
    <string name="d_xfkwz">吸风口位置:</string>
    <string name="d_pszt">喷水状态:</string>
    <string name="d_qsrmm1">请输入密码</string>
    <string name="d_qqrsrmm">请确认输入新密码</string>
    <string name="d_lcmmsrbyz">两次密码输入不一致</string>
    <string name="d_qzssrlwmm">请输入至少六位数密码</string>
    <string name="d_szcg">设置成功</string>
    <string name="d_qsrjmm">请输入旧密码</string>
    <string name="d_qsrxmm1">请输入新密码</string>
    <string name="d_qqrsrxmm">请确认输入新密码</string>
    <string name="d_ts3">请先选择作业地图和作业路径</string>
    <string name="d_zydd">作业地点：</string>
    <string name="d_zyrw">作业任务：</string>
    <string name="d_zydt">作业地图：</string>
    <string name="d_zyghlc">作业规划里程：</string>
    <string name="d_zyghmj">作业规划面积：</string>
    <string name="d_yjzysj">预计作业时间：</string>
    <string name="dataerror_please_retry">数据异常,返回地图重新选择</string>
    <string name="d_bnwk">不能为空</string>
    <string name="d_id_null">地图ID为空</string>
    <string name="d_lxdj">离线待机</string>
    <string name="d_lx">离线</string>
    <string name="d_zxdj">在线待机</string>
    <string name="d_zdzy">自动作业中</string>
    <string name="d_sdjs">手动驾驶中</string>
    <string name="d_zxdj">在线待机</string>
</resources>
