<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/text_style_20_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/mLinearLayout_zc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_15_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/mLinearLayout_1"
                    android:ems="6"
                    android:text="@string/d_sjhmyz" />

                <LinearLayout
                    android:id="@+id/mLinearLayout_1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/shape_logink"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/text_style_15_black"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="+86"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/black" />

                        <EditText
                            android:id="@+id/mEditText_phone"
                            style="@style/text_style_15_black"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:hint="@string/d_qsrsjh"
                            android:inputType="phone"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <ImageView
                            android:id="@+id/mImageView_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:src="@drawable/ic_close_black_24dp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/mEditText_code"
                            style="@style/text_style_15_black"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:hint="@string/d_qsryzm"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <TextView
                            android:id="@+id/mTextView_get"
                            style="@style/text_style_15_white"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/i_get_code" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


            <TextView
                android:id="@+id/mTextView_yz"
                style="@style/text_style_15_white"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/d_yz" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>