<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mLinearLayout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/mTextView_1"
                style="@style/text_style_15_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              />

            <ImageView
                android:id="@+id/mImageView_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearLayout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/mTextView_2"
                style="@style/text_style_15_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
         />

            <ImageView
                android:id="@+id/mImageView_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearLayout_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/mTextView_3"
                style="@style/text_style_15_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <ImageView
                android:id="@+id/mImageView_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_logink"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_style_15_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d_xxID"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                style="@style/text_style_15_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d_time2"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                style="@style/text_style_15_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d_zt"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                style="@style/text_style_15_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/d_nr"
                android:textStyle="bold" />

        </LinearLayout>


        <com.deepblue.aidevicemanager.util.PListView
            android:id="@+id/mAbPullListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@color/black"
            android:dividerHeight="1px"
            android:listSelector="#00000000"></com.deepblue.aidevicemanager.util.PListView>
    </LinearLayout>


</LinearLayout>